Optimize using explicit stack based state machines.
This improves perf by doing far fewer awaits.
We also use a state stack rather than using the call stack, so we can handle more deeply recursive structures without crashing.

--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
       "command": "tsc"
     },
     "test": {
-      "dependencies": ["build"],
-      "command": "node --test dist/test/*.js"
+      "dependencies": [
+        "build"
+      ],
+      "command": "node --test --test-reporter=spec dist/test/*.js"
     }
   }
 }
