--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^22.7.5",
+    "esbuild": "^0.24.0",
+    "tachometer": "^0.7.1",
     "typescript": "^5.6.3",
     "wireit": "^0.14.9"
   },
@@ -34,8 +36,25 @@
       "command": "tsc"
     },
     "test": {
-      "dependencies": ["build"],
+      "dependencies": [
+        "build"
+      ],
       "command": "node --test dist/test/*.js"
+    },
+    "esbuild": {
+      "files": [
+        "src/**/*.ts"
+      ],
+      "output": [
+        "bench/bundles/bundle.min.js"
+      ],
+      "command": "esbuild src/index.ts --bundle --format=esm --target=es2022 --minify --outfile=bench/bundles/bundle.min.js"
+    },
+    "benchmark": {
+      "dependencies": [
+        "esbuild"
+      ],
+      "command": "tachometer bench/jsonriver.html bench/jsonparse.html"
     }
   }
 }
