--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "A JSON parser that produces increasingly complete versions of the parsed value.",
   "main": "dist/index.js",
   "module": "dist/index.js",
+  "types": "dist/index.d.ts",
   "license": "BSD-3-Clause",
   "exports": {
     ".": {
@@ -12,7 +13,7 @@
     }
   },
   "files": [
-    "dist",
+    "dist/",
     "LICENSE",
     "README.md"
   ],
