Add property based testing, fix __proto__ key bug.
Using fast-check to do property based testing of jsonriver, to enforce
our invariants.

Found a bug where we don't match the behavior of JSON.parse for the
document `{"__proto__": 1}`

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "es2022",
     "module": "ES2020",
+    "moduleResolution": "node",
     "sourceMap": true,
     "rootDir": "./src",
     "outDir": "./dist",
